--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: isqNMYcxDeusriVuhGsKFwg1SttQTvZaSPHTEWwBVW9so9uCMLJUfkqS/eMWBCaE8QYnj3pLbre6Q1gtG6x01P2aW/SQs+TTvgv+xSnj6dvzCID8xyWKrum8xtZ2i6uKSrYqSliGRWw22kmA/ZXYnVEcTnQGzZoQ7ntrFVMh9Wg=
+    secure: Ae8jZLFoUIMMQLe/NPny75BrQG3vm393VmuZTilflvQ1jXZ56xwC5WF8/x5mdEZShasr57uZrWT9zpTYEaoRHWDYXAJ9KnvfKx31S+BugT/Ja3Kp1fqKvgPD8EaU0jKPnvTihvcZu6J8tc9SuerxeCbXVa0KpNKK/llqub3oTXY=
