--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: Ae8jZLFoUIMMQLe/NPny75BrQG3vm393VmuZTilflvQ1jXZ56xwC5WF8/x5mdEZShasr57uZrWT9zpTYEaoRHWDYXAJ9KnvfKx31S+BugT/Ja3Kp1fqKvgPD8EaU0jKPnvTihvcZu6J8tc9SuerxeCbXVa0KpNKK/llqub3oTXY=
+    secure: i3TgxQnNsicznfjcwox+79gxgcvi4Yd6ZLglm4SneOGfbFRiGKTvMkEIjgFMS2Hl7roepWP63hfvbvuhPUBtBb5jHjdSLdsiSXQHNntkg6kd0UtwkYaoWQAlzcBtSCTkrbk+wiOFO2EjhmvMD0d3us2ONEt/3OVgkVIqQuI2HRI=
